<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_login_whole"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_login" />

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="46px"
        android:orientation="vertical"
        android:weightSum="2" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_login_text_up"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="50px"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:src="@drawable/icon_account" />

            <EditText
                android:id="@+id/login_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:hint="@string/passport_hint"
                android:lines="1"
                android:textColor="@android:color/darker_gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_login_text_down"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="50px"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:src="@drawable/icon_password" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:hint="@string/password_hint"
                android:lines="1"
                android:password="true"
                android:textColor="@android:color/darker_gray" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24px"
        android:orientation="vertical" >

        <Button
            android:id="@+id/login_confirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/selector_login"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>