<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/title_bar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/background_login_whole"
        android:orientation="vertical"
        android:weightSum="4" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:src="@drawable/logo_about" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.5"
            android:gravity="center_horizontal|top"
            android:orientation="vertical" >

            <Button
                android:id="@+id/about_web"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_button_about"
                android:text="@string/about_web"
                android:textColor="#ffA88067"
                android:textSize="16sp" />

            <Button
                android:id="@+id/about_phone"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/selector_button_about"
                android:text="@string/about_phone"
                android:textColor="#ffA88067"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.5"
            android:gravity="center_horizontal|bottom" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="center"
                    android:src="@drawable/logo_small_about" />

                <TextView
                    android:id="@+id/about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="18dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/about"
                    android:textColor="#ffb94c05"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>